[package]
name = "cntlm-rs"
version = "0.1.0"
authors = ["christian.klat <christian.klat@gmail.com>"]

[dependencies]
hyper = "0.11.15"
hyper-tls = "0.1.2"
bytes = "0.4.6"
futures = "0.1.17"
native-tls = "0.1.5"
tokio-core = "0.1.12"
tokio-io = "0.1.4"
tokio-service = "0.1.0"
tokio-tls = "0.1.4"
winauth = "0.0.3"
base64 = "0.9.0"
httparse = "1.2.4"
configure = "0.1.1"
serde = "1.0.27"
serde_derive = "1.0.27"

[package.metadata]
url = "http://company.proxy"